--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - wasm-test
   - go-test
   - build
+  - trigger-doc-update
 
 build:
   stage: build
@@ -34,7 +35,6 @@ go-test:
 # mod proxy does cache pulls for about 30 minutes, so if quickly successive commits are done in
 # master/release, this will fail to pull the latest client, and the docs will not update.
 trigger-doc-update:
-  stage: trigger_integration
   image: $DOCKER_IMAGE
   script:
     # We use GOPRIVATE blank because not want to directly pull client, we want to use the public cache.
