Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ build:
     - go mod vendor -v
     - mkdir -p release
     - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -o release/xxdk.wasm main.go
+    - cp wasm_exec.js release/
   artifacts:
     paths:
       - release/
