--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ wasm-test:
   stage: wasm-test
   script:
     - export PATH=/root/go/bin:$PATH
-    - mv utils/utils_js.s utils/utils_js.s.bak
+    - echo > utils/utils_js.s
     - GOOS=js GOARCH=wasm go test ./... -v
 
 go-test:
