--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,7 @@ before_script:
   - export PATH=$HOME/go/bin:$PATH
 
 stages:
-  - wasm-test
-  - go-test
+  - test
   - build
   - doc-update
 
@@ -33,14 +32,15 @@ build:
       - release/
 
 wasm-test:
-  stage: wasm-test
+  stage: test
   script:
     - export PATH=/root/go/bin:$PATH
     - echo > utils/utils_js.s
+    - GOOS=js GOARCH=wasm go test ./indexedDb/... -v
     - GOOS=js GOARCH=wasm go test ./... -v
 
 go-test:
-  stage: go-test
+  stage: test
   script:
     - go mod vendor -v
     - go test ./... -v
