--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ before_script:
 stages:
   - test
   - build
+  - tag
   - doc-update
 
 build:
@@ -44,6 +45,17 @@ go-test:
   script:
     - go mod vendor -v
     - go test ./... -v
+
+tag:
+    stage: tag
+    only:
+        - master
+    image: $DOCKER_IMAGE
+    script:
+        - git remote add origin_tags git@$GITLAB_SERVER:elixxir/xxdk-wasm.git || true
+        - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -o release/xxdk.wasm main.go
+        - git tag $(sha256sum release/xxdk.wasm | awk '{ print $1 }') -f
+        - git push origin_tags -f --tags
 
 # This pipeline job will attempt to have pkg.go.dev update docs for xxdk-wasm.
 #
