--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ tag:
     script:
         - git remote add origin_tags git@$GITLAB_SERVER:elixxir/xxdk-wasm.git || true
         - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -o release/xxdk.wasm main.go
+        - sha256sum release/xxdk.wasm
         - git tag $(sha256sum release/xxdk.wasm | awk '{ print $1 }') -f
         - git push origin_tags -f --tags
 
