--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker-registry.xx.network/elixxir/sysadmin/backend-ci:go1.17-wasm
+image: $DOCKER_IMAGE
 
 before_script:
   - go version || echo "Go executable not found."
