Revert "Update .gitlab-ci.yml"
This reverts commit 166b64d50c6bfdcd8354651770c5285f5d0c03e4.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: $DOCKER_IMAGE
+image: docker-registry.xx.network/elixxir/sysadmin/backend-ci:go1.17-wasm
 
 before_script:
   - go version || echo "Go executable not found."
