--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,11 +31,11 @@ build:
     - go mod vendor -v
     - mkdir -p release
     - GOOS=js GOARCH=wasm go build -ldflags '-w -s' -o release/xxdk.wasm main.go
-    - GOOS=js GOARCH=wasm go build -mod vendor -ldflags '-w -s' -trimpath -o release/xxdk-channelsIndexedDkWorker.wasm ./indexedDb/channels/...
-    - GOOS=js GOARCH=wasm go build -mod vendor -ldflags '-w -s' -trimpath -o release/xxdk-dmIndexedDkWorker.wasm ./indexedDb/dm/...
+    - GOOS=js GOARCH=wasm go build -mod vendor -ldflags '-w -s' -trimpath -o release/xxdk-channelsIndexedDkWorker.wasm ./indexedDb/impl/channels/...
+    - GOOS=js GOARCH=wasm go build -mod vendor -ldflags '-w -s' -trimpath -o release/xxdk-dmIndexedDkWorker.wasm ./indexedDb/impl/dm/...
     - cp wasm_exec.js release/
-    - cp indexedDb/channels/channelsIndexedDbWorker.js release/
-    - cp indexedDb/dm/dmIndexedDbWorker.js release/
+    - cp indexedDb/impl/channels/channelsIndexedDbWorker.js release/
+    - cp indexedDb/impl/dm/dmIndexedDbWorker.js release/
   artifacts:
     paths:
       - release/
