--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ wasm-test:
     - echo > utils/utils_js.s
     - env
     - go install github.com/agnivade/wasmbrowsertest@latest
+    - mv ~/go/bin/go_js_wasm_exec ~/go/bin/go_js_wasm_exec.old
     - ln -s ~/go/bin/wasmbrowsertest ~/go/bin/go_js_wasm_exec
     - env | awk -F'=' '{print $1}' | grep -v PATH | xargs -Ixxx unset xxx
     - GOOS=js GOARCH=wasm go test ./indexedDb/... -v
