--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ wasm-test:
     - go install github.com/agnivade/wasmbrowsertest@latest
     - mv ~/go/bin/go_js_wasm_exec ~/go/bin/go_js_wasm_exec.old
     - ln -s ~/go/bin/wasmbrowsertest ~/go/bin/go_js_wasm_exec
+    - unset SSH_PRIVATE_KEY
     - unset $(env | grep '=' | awk -F'=' '{print $1}' | grep -v PATH)
     - GOOS=js GOARCH=wasm go test ./indexedDb/... -v
     - GOOS=js GOARCH=wasm go test ./... -v
