--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ wasm-test:
     - go install github.com/agnivade/wasmbrowsertest@latest
     - mv ~/go/bin/go_js_wasm_exec ~/go/bin/go_js_wasm_exec.old
     - ln -s ~/go/bin/wasmbrowsertest ~/go/bin/go_js_wasm_exec
+    - go mod vendor
     - unset SSH_PRIVATE_KEY
     - unset $(env | grep '=' | awk -F= '{print $1}' | grep -v PATH | grep -v GO | grep -v HOME)
     - GOOS=js GOARCH=wasm go test ./indexedDb/... -v
