--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,19 @@ go-test:
     - go mod vendor -v
     - go test ./... -v
 
+emoji-update:
+  stage: build
+  except:
+    - tags
+  script:
+    - go mod vendor -v
+    - mkdir -p release
+    - go run -ldflags '-w -s' ./emoji/... -o emojiSet.json
+    - cp emojiSet.json release/
+  artifacts:
+    paths:
+      - release/
+
 version_check:
   stage: version_check
   except:
