--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ combine_artefacts:
     - tags
   image: $DOCKER_IMAGE
   script:
-    - PIPELINE_JOBS=$(curl --header "PRIVATE-TOKEN: $GITLAB_TOKEN" $CI_SERVER_URL/api/v4/projects/$PIPELINE_JOBS/pipelines/$CI_PIPELINE_ID/jobs)
+    - 'PIPELINE_JOBS=$(curl --header "PRIVATE-TOKEN: $GITLAB_TOKEN" $CI_SERVER_URL/api/v4/projects/$PIPELINE_JOBS/pipelines/$CI_PIPELINE_ID/jobs)'
     - BUILD_JOB_JSON=$(echo $WASM_PIPELINE_JOB | jq '.[] | select(.name=="build")')
     - EMOJI_UPDATE_JOB_JSON=$(echo $PIPELINE_JOBS | jq '.[] | select(.name=="emoji-update")')
 
