--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,6 +80,7 @@ combine_artefacts:
     - tags
   image: $DOCKER_IMAGE
   script:
+    - echo $CI_SERVER_URL/api/v4/projects/$PIPELINE_JOBS/pipelines/$CI_PIPELINE_ID/jobs
     - 'PIPELINE_JOBS=$(curl --header "PRIVATE-TOKEN: $GITLAB_ACCESS_TOKEN" $CI_SERVER_URL/api/v4/projects/$PIPELINE_JOBS/pipelines/$CI_PIPELINE_ID/jobs)'
     - echo $PIPELINE_JOBS
     - BUILD_JOB_JSON=$(echo $WASM_PIPELINE_JOB | jq '.[] | select(.name=="build")')
