--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,7 +132,12 @@ doc-update:
   image: $DOCKER_IMAGE
   script:
     # GOPRIVATE is cleared so that the public cache is pulled instead of directly pulling client.
-    - GOOS=js GOARCH=wasm GOPRIVATE="" go install gitlab.com/elixxir/xxdk-wasm@$CI_COMMIT_SHA
+    - NEXT_WAIT_TIME=0
+      until [ $NEXT_WAIT_TIME -eq 15 ] || GOOS=js GOARCH=wasm GOPRIVATE="" go install gitlab.com/elixxir/xxdk-wasm@$CI_COMMIT_SHA
+      do 
+          sleep 60; (( NEXT_WAIT_TIME+=1 ))
+      done 
+      [ $NEXT_WAIT_TIME -lt 15 ]
   only:
     - release
     - master
