disabl wasm tests because of XX-4522

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,8 @@ wasm-test:
     - go mod vendor
     - unset SSH_PRIVATE_KEY
     - unset $(env | grep '=' | awk -F= '{print $1}' | grep -v PATH | grep -v GO | grep -v HOME)
-    - GOOS=js GOARCH=wasm go test ./... -v
+    - echo "WASM TESTS DISABLED FOR XX-4522, but will run them just so you can see output"
+    - GOOS=js GOARCH=wasm go test ./... -v || true
 
 build:
   stage: build
