--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ wasm-test:
     - unset SSH_PRIVATE_KEY
     - unset $(env | grep '=' | awk -F= '{print $1}' | grep -v PATH | grep -v GO | grep -v HOME)
     - echo "WASM TESTS DISABLED FOR XX-4522, but will run them just so you can see output"
-    - GOOS=js GOARCH=wasm go test ./... -v || true
+    - GOOS=js GOARCH=wasm go test ./... -v
 
 build:
   stage: build
